--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
 Django==2.0.1
 django-model-utils==3.1.1
+graphene==2.0.1
+graphene-django==2.0.0
+graphql-core==2.0
+graphql-relay==0.4.5
+iso8601==0.1.12
+promise==2.1
 psycopg2==2.7.3.2
 pytz==2017.3
+Rx==1.6.0
+singledispatch==3.4.0.3
+six==1.11.0
+typing==3.6.2
