--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
+attrs==17.4.0
 Django==2.0.1
 django-model-utils==3.1.1
+factory-boy==2.9.2
+Faker==0.8.8
 graphene==2.0.1
 graphene-django==2.0.0
 graphql-core==2.0
 graphql-relay==0.4.5
+inflection==0.3.1
 iso8601==0.1.12
+pluggy==0.6.0
 promise==2.1
 psycopg2==2.7.3.2
+py==1.5.2
+pytest==3.3.2
+pytest-django==3.1.2
+pytest-factoryboy==1.3.1
+python-dateutil==2.6.1
 pytz==2017.3
 Rx==1.6.0
 singledispatch==3.4.0.3
 six==1.11.0
+text-unidecode==1.1
 typing==3.6.2
