--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 attrs==17.4.0
 Django==2.0.1
 django-model-utils==3.1.1
-factory-boy==2.9.2
+djangorestframework==3.7.7
+factory-boy==2.8.1
 Faker==0.8.8
 graphene==2.0.1
 graphene-django==2.0.0
