--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,10 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings.base
 addopts = --reuse-db
+pep8maxlinelength = 120
+pep8ignore =
+    migrations/* ALL
+flake8-max-line-length = 120
+flake8-ignore =
+    migrations/* ALL
+    settings/* F401 F403
