--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,12 @@ jobs:
     docker:
       - image: circleci/python:3.6.1
 
+      - image: circleci/postgres:9.4
+        environment:
+          POSTGRES_USER: solutionloft
+          POSTGRES_DB: solutionloft
+          POSTGRES_PASSWORD: ""
+
     working_directory: ~/repo
 
     steps:
