--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
+apipkg==1.4
 attrs==17.4.0
 Django==2.0.1
 django-model-utils==3.1.1
 djangorestframework==3.7.7
+execnet==1.5.0
 factory-boy==2.8.1
 Faker==0.8.8
+flake8==3.5.0
 graphene==2.0.1
 graphene-django==2.0.0
 graphql-core==2.0
 graphql-relay==0.4.5
 inflection==0.3.1
 iso8601==0.1.12
+mccabe==0.6.1
+pep8==1.7.1
 pluggy==0.6.0
 promise==2.1
 psycopg2==2.7.3.2
 py==1.5.2
+pycodestyle==2.3.1
+pyflakes==1.6.0
 pytest==3.3.2
+pytest-cache==1.0
 pytest-django==3.1.2
 pytest-factoryboy==1.3.1
+pytest-flake8==0.9.1
+pytest-pep8==1.0.6
 python-dateutil==2.6.1
 pytz==2017.3
 Rx==1.6.0
