--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 apipkg==1.4
 attrs==17.4.0
+certifi==2017.11.5
+chardet==3.0.4
+coverage==4.4.2
 Django==2.0.1
 django-model-utils==3.1.1
 djangorestframework==3.7.7
@@ -11,6 +14,7 @@ graphene==2.0.1
 graphene-django==2.0.0
 graphql-core==2.0
 graphql-relay==0.4.5
+idna==2.6
 inflection==0.3.1
 iso8601==0.1.12
 mccabe==0.6.1
@@ -23,14 +27,19 @@ pycodestyle==2.3.1
 pyflakes==1.6.0
 pytest==3.3.2
 pytest-cache==1.0
+pytest-cov==2.5.1
 pytest-django==3.1.2
 pytest-factoryboy==1.3.1
 pytest-flake8==0.9.1
 pytest-pep8==1.0.6
 python-dateutil==2.6.1
 pytz==2017.3
+requests==2.18.4
 Rx==1.6.0
 singledispatch==3.4.0.3
 six==1.11.0
+slackclient==1.1.0
 text-unidecode==1.1
 typing==3.6.2
+urllib3==1.22
+websocket-client==0.46.0
