--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ apipkg==1.4
 attrs==17.4.0
 certifi==2017.11.5
 chardet==3.0.4
+cookies==2.2.1
 coverage==4.4.2
 Django==2.0.1
 django-model-utils==3.1.1
@@ -31,10 +32,12 @@ pytest-cov==2.5.1
 pytest-django==3.1.2
 pytest-factoryboy==1.3.1
 pytest-flake8==0.9.1
+pytest-mock==1.6.3
 pytest-pep8==1.0.6
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
+responses==0.8.1
 Rx==1.6.0
 singledispatch==3.4.0.3
 six==1.11.0
