added is_active, fixed datetime.now issue, adjusted some style config

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,8 +3,12 @@ DJANGO_SETTINGS_MODULE = config.settings.base
 addopts = --reuse-db
 pep8maxlinelength = 120
 pep8ignore =
+    *.py E126 E127
+    # Reason for above : Inconsistent w/ PyCharm cmd + opt + L formatter
     migrations/* ALL
 flake8-max-line-length = 120
 flake8-ignore =
+    *.py E126 E127
+    # Reason for above : Inconsistent w/ PyCharm cmd + opt + L formatter
     migrations/* ALL
     settings/* F401 F403
