--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==3.0.4
 cookies==2.2.1
 coverage==4.4.2
 Django==2.0.1
+django-fsm==2.6.0
 django-model-utils==3.1.1
 djangorestframework==3.7.7
 execnet==1.5.0
