Add redis to CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
           POSTGRES_DB: solutionloft
           POSTGRES_PASSWORD: ""
 
+      - image: redis
+
     working_directory: ~/repo
 
     steps:
