--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,12 @@ chardet==3.0.4
 cookies==2.2.1
 coverage==4.4.2
 Django==2.0.1
+django-celery-beat==1.1.0
+django-celery-results==1.0.1
 django-fsm==2.6.0
 django-model-utils==3.1.1
 djangorestframework==3.7.7
+ephem==3.7.6.0
 execnet==1.5.0
 factory-boy==2.8.1
 Faker==0.8.8
