Rock the casbah: Using transactional commits and fixtures with transactional_db

--- a/pytest.ini
+++ b/pytest.ini
@@ -17,3 +17,5 @@ flake8-ignore =
     # Reason for above: Import * from environment-specific file
     app/__init__.py F401
     # Reason for above: Need to import into root directory for Celery to pick up
+env =
+    ENVIRONMENT=TEST
