--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,13 @@
+aioredis==1.0.0
 amqp==2.2.2
 apipkg==1.4
-asgi-redis==1.4.3
-asgiref==2.1.3
-async-timeout==2.0.0
 attrs==17.4.0
-autobahn==17.10.1
-Automat==0.6.0
 billiard==3.5.0.3
 celery==4.1.0
 certifi==2017.11.5
-channels==2.0.1
 chardet==3.0.4
-constantly==15.1.0
 cookies==2.2.1
 coverage==4.4.2
-daphne==2.0.2
 Django==2.0.2
 django-celery-beat==1.1.0
 django-celery-results==1.0.1
@@ -30,6 +23,7 @@ graphene==2.0.1
 graphene-django==2.0.0
 graphql-core==2.0
 graphql-relay==0.4.5
+hiredis==0.2.0
 hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
@@ -37,6 +31,7 @@ inflection==0.3.1
 iso8601==0.1.12
 kombu==4.1.0
 mccabe==0.6.1
+msgpack==0.5.4
 msgpack-python==0.5.4
 pep8==1.7.1
 pluggy==0.6.0
@@ -45,7 +40,8 @@ psycopg2==2.7.3.2
 py==1.5.2
 pycodestyle==2.3.1
 pyflakes==1.6.0
-pytest==3.3.2
+pytest==3.4.0
+pytest-asyncio==0.8.0
 pytest-cache==1.0
 pytest-cov==2.5.1
 pytest-django==3.1.2
@@ -64,8 +60,6 @@ singledispatch==3.4.0.3
 six==1.11.0
 slackclient==1.1.0
 text-unidecode==1.1
-Twisted==17.9.0
-txaio==2.8.2
 typing==3.6.2
 urllib3==1.22
 vine==1.1.4
