--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,29 @@
     "apollo-link-http": "^1.3.3",
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
+    "material-ui": "^1.0.0-beta.33",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "typeface-montserrat": "^0.0.54",
+    "typeface-rajdhani": "^0.0.54",
+    "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
+    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+    "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "parcel-bundler": "^1.5.1"
   },
   "scripts": {
-    "start": "parcel index.html --open --https",
+    "start": "parcel index.html --open",
     "build": "REALM=production parcel build index.html --out-dir build/",
     "build-staging": "REALM=staging parcel build index.html --no-minify --out-dir build/"
   }
