--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "typeface-montserrat": "^0.0.54",
-    "typeface-rajdhani": "^0.0.54",
-    "typeface-roboto": "^0.0.54"
+    "typeface-rajdhani": "^0.0.54"
   },
   "devDependencies": {
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
