pull out client id and scopes to config

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 PORTAL_GRAPHQL_URL=localhost:8000/graphql
+SLACK_CLIENT_ID=10642948979.304937770738
+SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
