--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "parcel-bundler": "^1.5.1"
   },
   "scripts": {
-    "start": "parcel index.html --open",
+    "start": "parcel index.html --open --port 5000",
     "build": "REALM=production parcel build index.html --out-dir build/",
     "build-staging": "REALM=staging parcel build index.html --no-minify --out-dir build/"
   }
