--- a/client/package.json
+++ b/client/package.json
@@ -30,11 +30,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "parcel-bundler": "^1.5.1"
+    "parcel-bundler": "git://github.com/fathyb/parcel.git#fix/primitive-wildcard"
   },
   "scripts": {
-    "start": "parcel index.html --open --port 5000",
-    "build": "REALM=production parcel build index.html --out-dir build/",
-    "build-staging": "REALM=staging parcel build index.html --no-minify --out-dir build/"
+    "start": "node_modules/parcel-bundler/bin/cli.js index.html --open --port 5000",
+    "build": "REALM=production node_modules/parcel-bundler/bin/cli.js build index.html --out-dir build/",
+    "build-staging": "REALM=staging node_modules/parcel-bundler/bin/cli.js build index.html --no-minify --out-dir build/"
   }
 }
