--- a/client/package.json
+++ b/client/package.json
@@ -24,13 +24,14 @@
     "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "parcel-bundler": "git://github.com/fathyb/parcel.git#fix/primitive-wildcard"
+    "parcel-bundler": "git://github.com/tadas412/parcel.git"
   },
   "scripts": {
     "start": "node_modules/parcel-bundler/bin/cli.js index.html --open --port 5000",
