--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ coverage==4.4.2
 Django==2.0.2
 django-celery-beat==1.1.0
 django-celery-results==1.0.1
+django-cors-headers==2.1.0
 django-fsm==2.6.0
 django-model-utils==3.1.1
 djangorestframework==3.7.7
