--- a/client/.env
+++ b/client/.env
@@ -2,3 +2,4 @@ PORTAL_GRAPHQL_URL=http://localhost:8000/graphql
 UI_HOST=http://localhost:1234
 SLACK_CLIENT_ID=10642948979.304937770738
 SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
+NODE_PATH=src/
