--- a/client/package.json
+++ b/client/package.json
@@ -25,17 +25,27 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.2.2",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "jest": "^22.3.0",
     "parcel-bundler": "git://github.com/tadas412/parcel.git"
   },
   "scripts": {
     "start": "node_modules/parcel-bundler/bin/cli.js index.html --open --port 5000",
     "build": "REALM=production node_modules/parcel-bundler/bin/cli.js build index.html --out-dir build/",
-    "build-staging": "REALM=staging node_modules/parcel-bundler/bin/cli.js build index.html --no-minify --out-dir build/"
+    "build-staging": "REALM=staging node_modules/parcel-bundler/bin/cli.js build index.html --no-minify --out-dir build/",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "src",
+      "test"
+    ]
   }
 }
