--- a/client/package.json
+++ b/client/package.json
@@ -32,20 +32,26 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.3.0",
     "jest": "^22.3.0",
-    "parcel-bundler": "git://github.com/tadas412/parcel.git"
+    "parcel-bundler": "git://github.com/tadas412/parcel.git",
+    "react-test-renderer": "^16.2.0"
   },
   "scripts": {
     "start": "node_modules/parcel-bundler/bin/cli.js index.html --open --port 5000",
     "build": "REALM=production node_modules/parcel-bundler/bin/cli.js build index.html --out-dir build/",
     "build-staging": "REALM=staging node_modules/parcel-bundler/bin/cli.js build index.html --no-minify --out-dir build/",
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watch # watches tests related to files changed in git"
   },
   "jest": {
     "moduleDirectories": [
       "node_modules",
       "src",
       "test"
+    ],
+    "setupFiles": [
+      "testSetup.js"
     ]
   }
 }
