--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
 
       - image: redis
 
-      - image: circleci/node:9.5
+      - image: circleci/node:latest
 
     dependencies:
       override:
