Make beat leader only

--- a/.ebextensions/03_celery_beat.config
+++ b/.ebextensions/03_celery_beat.config
@@ -1,3 +1,4 @@
 container_commands:
-  01_restart_celery_beat:
+  01_start_celery_beat:
     command: "source /opt/python/run/venv/bin/active && celery -A app beat -l info"
+    leader_only: true
