--- a/.ebextensions/03_celery_beat.config
+++ b/.ebextensions/03_celery_beat.config
@@ -1,4 +1,47 @@
+files:
+  "/opt/python/etc/celerybeat.conf":
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      ; ========================
+      ;  celery beat supervisor
+      ; ========================
+
+      [program:celerybeat]
+      ; Set full path to celery program
+      command=/opt/python/run/venv/bin/app/celery beat -A app
+
+      ; Full path to Django app
+      directory=/opt/python/current/app
+      user=nobody
+      numprocs=1
+      stdout_logfile=/var/log/celery/beat.log
+      stderr_logfile=/var/log/celery/beat.log
+      autostart=true
+      autorestart=true
+      startsecs=10
+
+      ; Set its priority higher so it starts first
+      priority=999
+
+
 container_commands:
-  01_start_celery_beat:
-    command: "source /opt/python/run/venv/bin/activate && celery -A app beat -l info"
+  01_add_celery_beat_to_supervisord:
+    command:
+      if ! grep -Fxq "[include]" /opt/python/etc/supervisord.conf
+          then
+          echo "[include]" | tee -a /opt/python/etc/supervisord.conf
+          echo "files: celerybeat.conf" | tee -a /opt/python/etc/supervisord.conf
+      fi
+
+      # Reread the supervisord config
+      supervisorctl -c /opt/python/etc/supervisord.conf reread
+
+      # Update supervisord in cache without restarting all services
+      supervisorctl -c /opt/python/etc/supervisord.conf update
+    leader_only: true
+
+  02_restart_celery_beat:
+    command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat"
     leader_only: true
