--- a/.ebextensions/03_celery_beat.config
+++ b/.ebextensions/03_celery_beat.config
@@ -28,7 +28,7 @@ files:
 
 container_commands:
   01_add_celery_beat_to_supervisord:
-    command:
+    command: >
       if ! grep -Fxq "[include]" /opt/python/etc/supervisord.conf
           then
           echo "[include]" | tee -a /opt/python/etc/supervisord.conf
@@ -37,7 +37,7 @@ container_commands:
 
       # Reread the supervisord config
       supervisorctl -c /opt/python/etc/supervisord.conf reread
-      
+
       # Update supervisord in cache without restarting all services
       supervisorctl -c /opt/python/etc/supervisord.conf update
     leader_only: true
