--- a/.ebextensions/03_celery_worker.config
+++ b/.ebextensions/03_celery_worker.config
@@ -1,5 +1,5 @@
 files:
-  "/opt/python/etc/celerybeat.conf":
+  "/opt/python/etc/celery.conf":
     mode: "000755"
     owner: root
     group: root
@@ -25,14 +25,34 @@ files:
       ; Set its priority higher so it starts first
       priority=999
 
+      ; ==========================
+      ;  celery worker supervisor
+      ; ==========================
+
+      [program:celeryworker]
+      ; Set full path to celery program
+      command=/opt/python/run/venv/bin/app/celery worker -A app worker -l info
+
+      ; Full path to Django app
+      directory=/opt/python/current/app
+      user=nobody
+      numprocs=1
+      stdout_logfile=/var/log/celeryworker.log
+      stderr_logfile=/var/log/celeryworker.log
+      autostart=true
+      autorestart=true
+      startsecs=10
+
+      ; Set its priority higher so it starts first
+      priority=999
 
 container_commands:
-  01_add_celery_beat_to_supervisord:
+  01_add_celery_to_supervisord:
     command: >
       if ! grep -Fxq "[include]" /opt/python/etc/supervisord.conf
           then
           echo "[include]" | tee -a /opt/python/etc/supervisord.conf
-          echo "files: celerybeat.conf" | tee -a /opt/python/etc/supervisord.conf
+          echo "files: celery.conf" | tee -a /opt/python/etc/supervisord.conf
       fi
 
       # Reread the supervisord config
@@ -44,4 +64,8 @@ container_commands:
 
   02_restart_celery_beat:
     command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat"
+    leader_only: true
+
+  03_restart_celery_worker:
+    command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celeryworker"
     leader_only: true
