Add blank line before include

--- a/.ebextensions/03_celery_worker.config
+++ b/.ebextensions/03_celery_worker.config
@@ -51,6 +51,7 @@ container_commands:
     command: >
       if ! grep -Fxq "[include]" /opt/python/etc/supervisord.conf
           then
+          echo "" | tee -a /opt/python/etc/supervisord.conf
           echo "[include]" | tee -a /opt/python/etc/supervisord.conf
           echo "files: celery.conf" | tee -a /opt/python/etc/supervisord.conf
       fi
