repaired setup file

--- a/client/package.json
+++ b/client/package.json
@@ -50,8 +50,6 @@
       "src",
       "test"
     ],
-    "setupFiles": [
-      "testSetup.js"
-    ]
+    "globalSetup": "<rootDir>/test/setup.js"
   }
 }
