--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,3 +76,10 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+workflows:
+  version: 2
+  build_front_and_back:
+    jobs:
+      - build-backend
+      - build-frontend
