Kill previous beats

--- a/.ebextensions/03_celery_worker.config
+++ b/.ebextensions/03_celery_worker.config
@@ -10,7 +10,7 @@ files:
 
       [program:celerybeat]
       ; Set full path to celery program
-      command=/opt/python/run/venv/bin/app/celery beat -A app
+      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery beat -A app  --pidfile=/tmp/celerybeat-app.pid"
 
       ; Full path to Django app
       directory=/opt/python/current/app
@@ -31,7 +31,7 @@ files:
 
       [program:celeryworker]
       ; Set full path to celery program
-      command=/opt/python/run/venv/bin/app/celery worker -A app worker -l info
+      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery -A app worker -l info  --pidfile=/tmp/celeryworker-app.pid
 
       ; Full path to Django app
       directory=/opt/python/current/app
@@ -59,14 +59,21 @@ container_commands:
       # Reread the supervisord config
       supervisorctl -c /opt/python/etc/supervisord.conf reread
 
+      # Reload supervisord
+      supervisorctl -c /opt/python/etc/supervisord.conf reload
+
       # Update supervisord in cache without restarting all services
       supervisorctl -c /opt/python/etc/supervisord.conf update
     leader_only: true
 
-  02_restart_celery_beat:
+  02_kill_previous_beats:
+    command: "ps auxww | grep 'celery beat' | awk '{print $2}' | sudo xargs kill -9 || true"
+    ignoreErrors: true
+
+  03_restart_celery_beat:
     command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat"
     leader_only: true
 
-  03_restart_celery_worker:
+  04_restart_celery_worker:
     command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celeryworker"
     leader_only: true
