--- a/.ebextensions/03_celery_worker.config
+++ b/.ebextensions/03_celery_worker.config
@@ -9,8 +9,8 @@ files:
       ; ========================
 
       [program:celerybeat]
-      ; Set full path to celery program
-      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery beat -A app  --pidfile=/tmp/celerybeat-app.pid"
+      ; Load environmental variables and start beat
+      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery beat -A app"
 
       ; Full path to Django app
       directory=/opt/python/current/app
@@ -30,8 +30,8 @@ files:
       ; ==========================
 
       [program:celeryworker]
-      ; Set full path to celery program
-      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery -A app worker -l info  --pidfile=/tmp/celeryworker-app.pid
+      ; Load environmental variables and start worker
+      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery -A app worker -l info"
 
       ; Full path to Django app
       directory=/opt/python/current/app
