Clear pid files

--- a/.ebextensions/03_celery_worker.config
+++ b/.ebextensions/03_celery_worker.config
@@ -67,10 +67,13 @@ container_commands:
     command: "ps auxww | grep 'celery beat' | awk '{print $2}' | sudo xargs kill -9 || true"
     ignoreErrors: true
 
-  03_restart_celery_beat:
+  03_clear_pid_files:
+    command: "rm -f /tmp/*.pid"
+
+  04_restart_celery_beat:
     command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat"
     leader_only: true
 
-  04_restart_celery_worker:
+  05_restart_celery_worker:
     command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celeryworker"
     leader_only: true
