Make sure 03_clear_pid_files is only active on the leader instance

--- a/.ebextensions/03_celery_worker.config
+++ b/.ebextensions/03_celery_worker.config
@@ -69,6 +69,7 @@ container_commands:
 
   03_clear_pid_files:
     command: "rm -f /tmp/*.pid"
+    leader_only: true
 
   04_restart_celery_beat:
     command: "supervisorctl -c /opt/python/etc/supervisord.conf restart celerybeat"
