Specify pid file

--- a/.ebextensions/03_celery_worker.config
+++ b/.ebextensions/03_celery_worker.config
@@ -10,7 +10,7 @@ files:
 
       [program:celerybeat]
       ; Load environmental variables and start beat
-      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery beat -A app"
+      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery beat -A app --pidfile=/tmp/celerybeat.pid"
 
       ; Full path to Django app
       directory=/opt/python/current/app
@@ -31,7 +31,7 @@ files:
 
       [program:celeryworker]
       ; Load environmental variables and start worker
-      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery -A app worker -l info"
+      command=/bin/bash -c "source /opt/python/current/env && /opt/python/run/venv/bin/celery -A app worker -l info --pidfile=/tmp/celeryworker.pid"
 
       ; Full path to Django app
       directory=/opt/python/current/app
