--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,8 +1,36 @@
 container_commands:
-  01_migrate:
+  01_wsgi_pass_authorization:
+    command: >
+      # Turn on WSGIPassAuthorization if not found
+      if ! grep -Fxq "WSGIPassAuthorization On" /etc/httpd/conf.d/wsgi.conf
+          then
+          echo "WSGIPassAuthorization On" | tee -a /opt/python/etc/supervisord.conf
+      fi
+
+  02_wsgi_rewrite:
+    command: >
+      # Turn on RewriteEngine if not found
+      if ! grep -Fxq "RewriteEngine On" /etc/httpd/conf.d/wsgi.conf
+        then
+        echo "RewriteEngine On" | tee -a /opt/python/etc/supervisord.conf
+      fi
+
+      # Add https RewriteCond if not found
+      if ! grep -Fxq "RewriteCond %{HTTP:X-Forwarded-Proto} !https" /etc/httpd/conf.d/wsgi.conf
+        then
+        echo "RewriteCond %{HTTP:X-Forwarded-Proto} !https" | tee -a /opt/python/etc/supervisord.conf
+      fi
+
+      # Add https RewriteRule if not found
+      if ! grep -Fxq "RewriteRule . https://%{SERVER_NAME} [L,R=301]" /etc/httpd/conf.d/wsgi.conf
+        then
+        echo "RewriteRule . https://%{SERVER_NAME} [L,R=301]" | tee -a /opt/python/etc/supervisord.conf
+      fi
+
+  03_migrate:
     command: "python manage.py migrate"
 
-  02_collectstatic:
+  04_collectstatic:
     command: "python manage.py collectstatic --noinput"
 
 
