--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "apollo-client-preset": "^1.0.8",
     "apollo-link-http": "^1.3.3",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
     "material-ui": "^1.0.0-beta.33",
