--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -3,24 +3,24 @@ container_commands:
     command: >
       # Turn on WSGIPassAuthorization if not found
       if ! grep -Fxq "WSGIPassAuthorization On" /etc/httpd/conf.d/wsgi.conf; then
-          echo "WSGIPassAuthorization On" | tee -a /opt/python/etc/supervisord.conf
+          echo "WSGIPassAuthorization On" | tee -a /etc/httpd/conf.d/wsgi.conf
       fi
 
   02_wsgi_rewrite:
     command: >
       # Turn on RewriteEngine if not found
       if ! grep -Fxq "RewriteEngine On" /etc/httpd/conf.d/wsgi.conf; then
-          echo "RewriteEngine On" | tee -a /opt/python/etc/supervisord.conf
+          echo "RewriteEngine On" | tee -a /etc/httpd/conf.d/wsgi.conf
       fi
 
       # Add https RewriteCond if not found
       if ! grep -Fxq "RewriteCond %{HTTP:X-Forwarded-Proto} !https" /etc/httpd/conf.d/wsgi.conf; then
-          echo "RewriteCond %{HTTP:X-Forwarded-Proto} !https" | tee -a /opt/python/etc/supervisord.conf
+          echo "RewriteCond %{HTTP:X-Forwarded-Proto} !https" | tee -a /etc/httpd/conf.d/wsgi.conf
       fi
 
       # Add https RewriteRule if not found
       if ! grep -Fxq "RewriteRule . https://%{SERVER_NAME} [L,R=301]" /etc/httpd/conf.d/wsgi.conf; then
-          echo "RewriteRule . https://%{SERVER_NAME} [L,R=301]" | tee -a /opt/python/etc/supervisord.conf
+          echo "RewriteRule . https://%{SERVER_NAME} [L,R=301]" | tee -a /etc/httpd/conf.d/wsgi.conf
       fi
 
   03_migrate:
