--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,4 +1,7 @@
 container_commands:
+  00_echo:
+    command: "pwd"
+
   01_wsgi_pass_authorization:
     command: >
       if ! grep -Fxq "WSGIPassAuthorization On" /etc/httpd/conf.d/wsgi.conf; then
