Copy wsgi.conf to staging directory

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,25 +1,25 @@
 container_commands:
-  00_echo:
-    command: "pwd"
+  00_copy_wsgi:
+    command: "cp /etc/httpd/conf.d/wsgi.conf ../"
 
   01_wsgi_pass_authorization:
     command: >
-      if ! grep -Fxq "WSGIPassAuthorization On" /etc/httpd/conf.d/wsgi.conf; then
-          echo "WSGIPassAuthorization On" | tee -a /etc/httpd/conf.d/wsgi.conf
+      if ! grep -Fxq "WSGIPassAuthorization On" ../wsgi.conf; then
+          echo "WSGIPassAuthorization On" | tee -a ../wsgi.conf
       fi
 
   02_wsgi_rewrite:
     command: >
-      if ! grep -Fxq "RewriteEngine On" /etc/httpd/conf.d/wsgi.conf; then
-          echo "RewriteEngine On" | tee -a /etc/httpd/conf.d/wsgi.conf
+      if ! grep -Fxq "RewriteEngine On" ../wsgi.conf; then
+          echo "RewriteEngine On" | tee -a ../wsgi.conf
       fi
 
-      if ! grep -Fxq "RewriteCond %{HTTP:X-Forwarded-Proto} !https" /etc/httpd/conf.d/wsgi.conf; then
-          echo "RewriteCond %{HTTP:X-Forwarded-Proto} !https" | tee -a /etc/httpd/conf.d/wsgi.conf
+      if ! grep -Fxq "RewriteCond %{HTTP:X-Forwarded-Proto} !https" ../wsgi.conf; then
+          echo "RewriteCond %{HTTP:X-Forwarded-Proto} !https" | tee -a ../wsgi.conf
       fi
 
-      if ! grep -Fxq "RewriteRule . https://%{SERVER_NAME} [L,R=301]" /etc/httpd/conf.d/wsgi.conf; then
-          echo "RewriteRule . https://%{SERVER_NAME} [L,R=301]" | tee -a /etc/httpd/conf.d/wsgi.conf
+      if ! grep -Fxq "RewriteRule . https://%{SERVER_NAME} [L,R=301]" ../wsgi.conf; then
+          echo "RewriteRule . https://%{SERVER_NAME} [L,R=301]" | tee -a ../wsgi.conf
       fi
 
   03_migrate:
