--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "apollo-client": "^2.2.3",
     "apollo-client-preset": "^1.0.8",
     "apollo-link-http": "^1.3.3",
+    "apollo-link-schema": "^1.0.3",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
+    "graphql-tools": "^2.21.0",
     "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
