--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
     "graphql-tools": "^2.21.0",
+    "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
