--- a/client/.env
+++ b/client/.env
@@ -4,3 +4,4 @@ SLACK_CLIENT_ID=10642948979.304937770738
 SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
+VERSION=0.0.0
