--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,4 @@
 PORTAL_GRAPHQL_URL=https://www.app.codeclippy.com/graphql
 UI_HOST=https://www.app.codeclippy.com
+SENTRY_IO_KEY=595c6b3852d5436181f9174bee265572
+SENTRY_IO_PROJECT=289123
