--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ client/node_modules/
 client/build/
 client/.env.local
 client/yarn-error.log
+client/.env.production
+client/.env.staging
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
