--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,5 @@ SLACK_SCOPES="admin commands bot channels:history channels:read channels:write c
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
 VERSION=0.0.0
+SENTRY_IO_KEY=595c6b3852d5436181f9174bee265572
+SENTRY_IO_PROJECT=289123
