--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,10 @@
-venv/
-*.pyc
 workspace.xml
 misc.xml
 *.iml
-db.config.json
 .cache/
-.coverage
-.pytest_cache
-
-# Frontend
-client/.cache/
-client/dist/
-client/node_modules/
-client/build/
-client/.env.local
-client/yarn-error.log
-
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+dist/
+node_modules/
+build/
+.env.local
+yarn-error.log
+.DS_Store
