added staging config and readme updates

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ VERSION=0.0.0
 SENTRY_IO_KEY=595c6b3852d5436181f9174bee265572
 SENTRY_IO_PROJECT=289123
 SLACK_CLIENT_ID=SOMECLIENTID
+STRAND_API_DEPENDENCY=0.1.0
