--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
       - run:
           name: Login to AWS
           command: |
-            pip install awscli
+            sudo apt-get -y -qq install awscli
             eval $(aws ecr get-login --no-include-email --region us-east-1)
 
       - run:
