--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,13 +67,13 @@ jobs:
       - run:
           name: Login to AWS
           command: |
-            apt install python-pip python-dev && pip install awscli
+            apt-get -y install python-pip
             eval $(aws ecr get-login --no-include-email --region us-east-1)
 
       - run:
           name: Upload to S3
           command: |
-            apt install python-pip python-dev && pip install awscli
+            apt-get -y install python-pip
             aws s3 rm s3://staging.app.trystrand.com/ --recursive && aws s3 cp build/ s3://staging.app.trystrand.com/ --recursive
 
 
