--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,7 @@ jobs:
       - run:
           name: Upload to S3
           command: |
+            sudo apt-get install software-properties-common && sudo apt-get install software-properties-common && sudo apt-get update && apt-get -y install python-pip
             aws s3 rm s3://staging.app.trystrand.com/ --recursive && aws s3 cp build/ s3://staging.app.trystrand.com/ --recursive
 
 
