--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,12 +67,31 @@ jobs:
       - run:
           name: Login to AWS
           command: |
-            apt-get install software-properties-common && apt-get install software-properties-common && apt-get update && apt-get -y install python-pip
+            apt-get update && \
+                apt-get install -y \
+                    python \
+                    python-dev \
+                    python-pip \
+                    python-setuptools \
+                    groff \
+                    less \
+                && pip install --upgrade awscli \
+                && apt-get clean
             eval $(aws ecr get-login --no-include-email --region us-east-1)
 
       - run:
           name: Upload to S3
           command: |
+            apt-get update && \
+                          apt-get install -y \
+                              python \
+                              python-dev \
+                              python-pip \
+                              python-setuptools \
+                              groff \
+                              less \
+                          && pip install --upgrade awscli \
+                          && apt-get clean
             apt-get install software-properties-common && apt-get install software-properties-common && apt-get update && apt-get -y install python-pip
             aws s3 rm s3://staging.app.trystrand.com/ --recursive && aws s3 cp build/ s3://staging.app.trystrand.com/ --recursive
 
