--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ UI_HOST=http://localhost:3000
 SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
-VERSION=0.0.0
+VERSION=0.1.0
 SENTRY_IO_KEY=595c6b3852d5436181f9174bee265572
 SENTRY_IO_PROJECT=289123
 SLACK_CLIENT_ID=SOMECLIENTID
+STRAND_API_DEPENDENCY=0.1.0
