--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-jest": "^22.2.2",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-preset-env": "^1.6.1",
@@ -42,15 +43,19 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
+    "file-loader": "^1.1.10",
     "jest": "^22.3.0",
-    "parcel-bundler": "git://github.com/tadas412/parcel.git",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9"
   },
   "config": {
     "stagingcdn": "https://staging.app.trystrand.com",
     "productioncdn": "https://app.trystrand.com"
   },
   "scripts": {
+    "build-wp-dev": "webpack --mode development",
+    "build-wp": "webpack --mode production",
     "start": "node_modules/parcel-bundler/bin/cli.js index.html --open --port 3000",
     "build-cmd": "rm -rf build/ && node_modules/parcel-bundler/bin/cli.js build --out-dir build/ index.html",
     "build-staging": "REALM=staging yarn build-cmd --public-url \"$npm_package_config_stagingcdn\"",
