--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-client-preset": "^1.0.8",
     "apollo-link-http": "^1.3.3",
     "apollo-link-schema": "^1.0.3",
+    "dotenv-webpack": "^1.5.5",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "graphql": "^0.13.0",
