--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.18",
     "enzyme": "^3.3.0",
     "eslint": "^4.17.0",
     "eslint-plugin-import": "^2.8.0",
