moving index config to env vars

--- a/.env.staging
+++ b/.env.staging
@@ -1,1 +1,3 @@
-# see index.js
+PORTAL_GRAPHQL_URL=https://staging.api.trystrand.com/graphql
+UI_HOST=https://staging.app.trystrand.com
+SLACK_CLIENT_ID=299839214388.299767954400
