--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "jest": "^22.3.0",
     "react-test-renderer": "^16.2.0",
+    "ts-loader": "^4.0.0",
+    "typescript": "^2.7.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0"
