move to raven-js

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
+    "raven-js": "^3.22.4",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
