--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "@types/node": "^9.4.6",
+    "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-router-dom": "^4.2.4",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.2.2",
     "babel-loader": "^7.1.3",
