dev .env file updates

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORTAL_GRAPHQL_URL=http://localhost:8000/graphql
-UI_HOST=http://localhost:3000
+UI_HOST=http://strand-ui.ngrok.io
 SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
 VERSION=0.0.0
 SENTRY_IO_KEY=595c6b3852d5436181f9174bee265572
 SENTRY_IO_PROJECT=289123
-SLACK_CLIENT_ID=SOMECLIENTID
+SLACK_CLIENT_ID=319694506422.319705404998
 STRAND_API_DEPENDENCY=0.1.0
