refactored env variables (typescript was giving issues with contexts)

--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,3 @@
-PORTAL_GRAPHQL_URL=https://staging.api.trystrand.com/graphql
+GRAPHQL_URL=https://staging.api.trystrand.com/graphql
 UI_HOST=https://staging.app.trystrand.com
 SLACK_CLIENT_ID=299839214388.299767954400
