--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
@@ -55,6 +56,7 @@
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "jest": "^22.3.0",
     "react-test-renderer": "^16.2.0",
+    "ts-jest": "^22.4.0",
     "ts-loader": "^4.0.0",
     "typescript": "^2.7.2",
     "webpack": "^4.0.1",
