--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "main": "index.js",
+  "types": "index.d.ts",
   "license": "UNLICENSED",
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.7",
