--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-test-renderer": "^16.2.0",
     "ts-jest": "^22.4.0",
     "ts-loader": "^4.0.0",
+    "ts-node": "^5.0.0",
     "typescript": "^2.7.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
