UI-45: Parcel to webpack (#5)
* basic webpack bundler

* local dev server working

* added dotenv support

* first pass at hmr

* handling react router for webpack

* working hmr

* moving index config to env vars

* working public path

* repaired local public out

* removed parcel stuff from circleci

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-client-preset": "^1.0.8",
     "apollo-link-http": "^1.3.3",
     "apollo-link-schema": "^1.0.3",
+    "dotenv-webpack": "^1.5.5",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "graphql": "^0.13.0",
@@ -22,18 +23,21 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-jest": "^22.2.2",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.18",
     "enzyme": "^3.3.0",
     "eslint": "^4.17.0",
     "eslint-plugin-import": "^2.8.0",
@@ -42,19 +46,23 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
+    "file-loader": "^1.1.10",
+    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "jest": "^22.3.0",
-    "parcel-bundler": "git://github.com/tadas412/parcel.git",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.1.0"
   },
   "config": {
     "stagingcdn": "https://staging.app.trystrand.com",
     "productioncdn": "https://app.trystrand.com"
   },
   "scripts": {
-    "start": "node_modules/parcel-bundler/bin/cli.js index.html --open --port 3000",
-    "build-cmd": "rm -rf build/ && node_modules/parcel-bundler/bin/cli.js build --out-dir build/ index.html",
-    "build-staging": "REALM=staging yarn build-cmd --public-url \"$npm_package_config_stagingcdn\"",
-    "build": "REALM=production yarn build-cmd --public-url \"$npm_package_config_productioncdn\"",
+    "start": "webpack-dev-server --mode development --open",
+    "build-cmd": "webpack --mode production",
+    "build-staging": "yarn build-cmd --env.NODE_ENV=staging --output-public-path \"$npm_package_config_stagingcdn\"",
+    "build": "yarn build-cmd --env.NODE_ENV=production --output-public-path \"$npm_package_config_productioncdn\"",
     "test": "jest",
     "test-watch": "jest --watch # watches tests related to files changed in git",
     "test-watch-all": "jest --watchAll"
