--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
-PORTAL_GRAPHQL_URL=https://api.trystrand.com/graphql
-UI_HOST=https://app.trystrand.com
-SLACK_CLIENT_ID=10642948979.304937770738
+PORTAL_GRAPHQL_URL=http://localhost:8000/graphql
+UI_HOST=http://strand-ui.ngrok.io
+SLACK_CLIENT_ID=319694506422.319705404998
 SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
